--- a/index.html
+++ b/index.html
@@ -53,6 +53,8 @@ layout: default
         {% capture resume %}{% include resume.md %}{% endcapture %}
         {{ resume | markdownify }}
         <hr>
+          <p>Resume last updated: August 2016</p>
+        <hr>
         <div class="article-navigation">
           <a href="/#" class="article-header"><h3>back to top</h3></a>
         </div>
