--- a/index.html
+++ b/index.html
@@ -53,7 +53,10 @@ layout: default
         {% capture resume %}{% include resume.md %}{% endcapture %}
         {{ resume | markdownify }}
         <hr>
+        <div class="centered">
           <p>Resume last updated: August 2016</p>
+          <a href="/resume.pdf"><i class="fa fa-download"></i>Download this resume as a PDF<i class="fa fa-download"></i></a>
+        </div>
         <hr>
         <div class="article-navigation">
           <a href="/#" class="article-header"><h3>back to top</h3></a>
