--- a/index.html
+++ b/index.html
@@ -18,6 +18,10 @@ layout: default
         {% capture about %}{% include about.md %}{% endcapture %}
         {{ about | markdownify }}
         <hr>
+        <div class="centered">
+          <p>Last updated: August 2016</p>
+        </div>
+        <hr>
         <div class="article-navigation">
           <a href="/#" class="article-header"><h3>back to top</h3></a>
         </div>
@@ -54,7 +58,7 @@ layout: default
         {{ resume | markdownify }}
         <hr>
         <div class="centered">
-          <p>Resume last updated: August 2016</p>
+          <p>Last updated: August 2016</p>
           <a href="/resume.pdf"><i class="fa fa-download"></i>Download this resume as a PDF<i class="fa fa-download"></i></a>
         </div>
         <hr>
